# rutils

./: CMakeLists.txt  IIniManager.hpp  IniManager.hpp  README.md  RutilsException.hpp  RutilsParsingTools.hpp  Singleton.hpp  main.cpp  test.hpp  test.ini
